--- a/nZone/Storyboard/Base.lproj/Main.storyboard
+++ b/nZone/Storyboard/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
+        <!--Reserved Courts-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="Announcements" customModule="nZone" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,11 +20,44 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="LYd-3T-KhZ"/>
+                    <navigationItem key="navigationItem" title="Reserved Courts" id="QJm-xY-rs7">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="2pr-HY-BRu">
+                            <connections>
+                                <segue destination="sZr-Xt-TlO" kind="presentation" id="g5T-8a-gzr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="620" y="-304"/>
+            <point key="canvasLocation" x="1442" y="-304"/>
+        </scene>
+        <!--Reserve Courts-->
+        <scene sceneID="T2d-7W-8rM">
+            <objects>
+                <viewController id="Nsp-EX-VN1" customClass="ReserveCourts" customModule="nZone" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kLB-DT-e1G">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="GDB-Gq-qOE"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Reserve Courts" id="3Fv-Po-cB1">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="1jV-mE-gpB">
+                            <connections>
+                                <action selector="cancel:" destination="Nsp-EX-VN1" id="vpz-wx-sbH"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="TW3-Kh-2Ox">
+                            <connections>
+                                <action selector="done:" destination="Nsp-EX-VN1" id="uEC-53-iP6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="un7-kb-xCR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3126" y="-304"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9Bn-ty-SaE">
@@ -32,34 +65,91 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="dvK-jq-1Ii" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YuI-Ya-bvn">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="NOe-LE-aUm"/>
-                        <segue destination="UjU-EG-ysQ" kind="relationship" relationship="viewControllers" id="Q8Y-yR-UQ2"/>
+                        <segue destination="GF7-gU-29h" kind="relationship" relationship="viewControllers" id="Q8Y-yR-UQ2"/>
+                        <segue destination="kpW-BM-2G5" kind="relationship" relationship="viewControllers" id="NOe-LE-aUm"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lfq-WH-tNR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-163.19999999999999" y="133.13343328335833"/>
         </scene>
-        <!--Item-->
+        <!--Announcements-->
         <scene sceneID="iUl-GF-vVy">
             <objects>
-                <viewController id="UjU-EG-ysQ" sceneMemberID="viewController">
+                <viewController id="UjU-EG-ysQ" customClass="Announcements" customModule="nZone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FEv-SW-yR1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="GhH-y8-hHK"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="QXw-6B-CyU"/>
+                    <navigationItem key="navigationItem" title="Announcements" id="w9d-Pd-Gfb"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QZc-vc-lqH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="620" y="462"/>
+            <point key="canvasLocation" x="1441" y="461"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="AsJ-dJ-I7N">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kpW-BM-2G5" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="LYd-3T-KhZ"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="328-vA-B8A">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="gKC-Jy-tnw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Oj-uW-ssi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="619.20000000000005" y="-304.04797601199402"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Dmw-Ku-poH">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sZr-Xt-TlO" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xiR-Se-S2v">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Nsp-EX-VN1" kind="relationship" relationship="rootViewController" id="cDh-G5-KG8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PFd-2H-qSQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2267.1999999999998" y="-304.04797601199402"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="5Aw-oi-Vor">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GF7-gU-29h" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="QXw-6B-CyU"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iBB-cR-vxK">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="UjU-EG-ysQ" kind="relationship" relationship="rootViewController" id="fAX-EP-0Qt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qri-1B-PRf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="619.20000000000005" y="461.46926536731638"/>
         </scene>
     </scenes>
 </document>
