--- a/nZone/Storyboard/Base.lproj/Main.storyboard
+++ b/nZone/Storyboard/Base.lproj/Main.storyboard
@@ -78,28 +78,28 @@
             </objects>
             <point key="canvasLocation" x="-163.19999999999999" y="133.13343328335833"/>
         </scene>
-        <!--Announcements-->
+        <!--Events-->
         <scene sceneID="iUl-GF-vVy">
             <objects>
-                <viewController id="UjU-EG-ysQ" customClass="Announcements" customModule="nZone" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="UjU-EG-ysQ" customClass="Events" customModule="nZone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FEv-SW-yR1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="GhH-y8-hHK"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Announcements" id="w9d-Pd-Gfb"/>
+                    <navigationItem key="navigationItem" title="Events" id="w9d-Pd-Gfb"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QZc-vc-lqH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1441" y="461"/>
         </scene>
-        <!--Item-->
+        <!--Courts-->
         <scene sceneID="AsJ-dJ-I7N">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kpW-BM-2G5" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="LYd-3T-KhZ"/>
+                    <tabBarItem key="tabBarItem" title="Courts" image="Basketball-Hoop.png" id="LYd-3T-KhZ"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="328-vA-B8A">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -132,11 +132,11 @@
             </objects>
             <point key="canvasLocation" x="2267.1999999999998" y="-304.04797601199402"/>
         </scene>
-        <!--Item-->
+        <!--Events-->
         <scene sceneID="5Aw-oi-Vor">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GF7-gU-29h" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="QXw-6B-CyU"/>
+                    <tabBarItem key="tabBarItem" title="Events" image="Newspaper-Articles.png" id="QXw-6B-CyU"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="iBB-cR-vxK">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -152,4 +152,8 @@
             <point key="canvasLocation" x="619.20000000000005" y="461.46926536731638"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Basketball-Hoop.png" width="25" height="25"/>
+        <image name="Newspaper-Articles.png" width="25" height="25"/>
+    </resources>
 </document>
